--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
 <meta charset="utf-8">
 <title>BAC Simulator</title>
+<style>
+html, body {
+	height: 100%;
+	border: 0;
+	margin: 0;
+}
+</style>
 <body>
 <div class="container">
 </div>
+
 <script src='./index.js'>
 </script>
 </body>
