--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <meta charset="utf-8">
+<!--<meta name="viewport" content="width=device-width, initial-scale=1">-->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
 <title>BAC Simulator</title>
 <style>
 html, body {
